Added support for cloud save for state node in studio
